--- a/OuvidoriaClient/ouvidoria/src/main/AndroidManifest.xml
+++ b/OuvidoriaClient/ouvidoria/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="br.com.suelengc.ouvidoria.client.view.IncidentActivity"
+            android:name=".view.IncidentFragment"
             android:label="@string/title_activity_incident" />
         <activity
             android:name="br.com.suelengc.ouvidoria.client.view.MainActivity"
